<resources>
    <string name="app_name">MAD Assignment 1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">First Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="home">Home</string>
    <string name="add">add</string>
    <string name="last_name">Last Name</string>
    <string name="id">Student ID</string>
    <string name="course_study">Course Study</string>
    <string name="view_student">View Student</string>
    <string name="edit_student">Edit Student</string>
    <string name="view_task">View Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="student_address">Address</string>
    <string name="task_status">Task Status</string>
    <string name="update">Update</string>
    <string name="view_all">View All</string>
    <string name="age">Age</string>
    <string name="view">View</string>
    <string name="add_student">Add Student</string>
    <string name="Task">Task</string>
    <string name="task_location">Task Location</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="task_array">
        <item>Complete</item>
        <item>Incomplete</item>
    </string-array>
</resources>